--- a/daily-animation/day1-cook-egg.html
+++ b/daily-animation/day1-cook-egg.html
@@ -20,7 +20,7 @@
                             </div>
                         </div>
                     </div>
-                    <p class="desc">Day1 Cook Breakfast<br>2017.12.10</p>
+                    <p class="desc">Day1 <span>12th of DEC.</span> Cook Breakfast</p>
                 </div>
                 
                 <!----day2---->
