Revise css filepath

--- a/daily-animation/daily-animation.html
+++ b/daily-animation/daily-animation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <link href="day1-cook-egg.css" rel="stylesheet" type="text/css">
+    <link href="daily-animation.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
         <title>A housewife's daily animation | all about waiting</title>
     </head>
