Add iteration cout and change title

--- a/daily-animation/daily-animation.html
+++ b/daily-animation/daily-animation.html
@@ -3,7 +3,7 @@
     <head>
     <link href="daily-animation.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
-        <title>A housewife's daily animation | all about waiting</title>
+        <title>All about waiting</title>
     </head>
     <body>
         <header>
