--- a/freecodecamp_challenge/localweather/localWeather.html
+++ b/freecodecamp_challenge/localweather/localWeather.html
@@ -40,7 +40,7 @@
     // document.getElementById('month').innerHTML = months[time.getMonth()];
     // document.getElementById('date').innerHTML = time.getDate() + 'th';
 
-    var icons = ['wi-day-sunny', 'wi-day-sunny', 'wi-thunderstorm', 'wi-raindrops', 'wi-cloudy', 'wi-umbrella', 'wi-snow-wind', 'wi-fog'];
+    var icons = ['wi-day-sunny', 'wi-day-sunny', 'wi-thunderstorm', 'wi-raindrops', 'wi-cloudy', 'wi-umbrella', 'wi-snow-wind', 'wi-fog', 'wi-day-sunny'];
     var degree;
     window.onload =
       function() {
