--- a/freecodecamp_challenge/twitch/twitch.html
+++ b/freecodecamp_challenge/twitch/twitch.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Twitch</title>
+
   <style>
     @import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
     * {
@@ -20,7 +21,8 @@
       width: 100%;
       height: 32px;
       background: rgb(100, 65, 164);
-      padding: 10px calc(50% - 284px);
+      padding: 10px;
+      /* padding-left: calc(50% - 284px); */
       /* background-image: linear-gradient(-225deg, #3D4E81 0%, #5753C9 48%, #6E7FF3 100%); */
     }
 
