--- a/react/random-quote/public/index.html
+++ b/react/random-quote/public/index.html
@@ -20,14 +20,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
-  <style>
-    body {
-      height: 100%;
-      background: url('Shakespeare.jpg') no-repeat center;
-      background-size: cover;
-    }
-  </style>
+  <title>Quote Shakespeare</title>
+
 </head>
 
 <body>
