--- a/freecodecamp_challenge/wikipedia/index.html
+++ b/freecodecamp_challenge/wikipedia/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700|Roboto:300,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,700,700|Roboto:300,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <title>wikipedia</title>
   <style>
     html,
@@ -151,31 +152,43 @@
       background: #eaeaea;
     }
 
-    #container-hero-image {
-      box-sizing: border-box;
-      /* outline: 1px solid blue; */
+    #container-bg-img {
       height: 100vh;
       background-image: url('bg.jpg');
       background-repeat: no-repeat;
       background-size: cover;
+
+    }
+
+    #container-hero-image {
+      box-sizing: border-box;
+      height: 100vh;
+      background-image: linear-gradient(to top, rgba(256, 256, 256, 0), rgba(256, 256, 256, 1));
+      background-repeat: no-repeat;
+      background-size: cover;
       padding: 15% 20%;
       text-align: center;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
     }
 
     #container-hero-image h1 {
-      font-size: 62px;
+      font-size: 65px;
       margin-bottom: 25px;
       color: #2F3132;
-      font-family: 'Roboto', sans serif;
-      font-weight: medium;
+      font-family: 'Merriweather', serif;
+      font-weight: 700;
     }
 
     #container-hero-image p {
       font-size: 24px;
       margin-bottom: 50px;
       color: #2F3132;
-      font-family: 'Roboto', sans serif;
+      font-family: 'Open Sans', sans serif;
       font-weight: 300;
+      /* text-shadow: 0 1px 3px rgba(0, 0, 0, .7); */
     }
 
     #container-hero-image input {
@@ -184,7 +197,7 @@
       height: 42px;
       padding-left: 15px;
       border-radius: 20px;
-      margin-bottom: 25px;
+      margin-bottom: 50px;
       font-weight: 300;
     }
 
@@ -196,7 +209,11 @@
       color: #fff;
       font-weight: 300;
       letter-spacing: 1px;
-      text-decoration: underline;
+      font-size: 16px;
+      /* text-decoration: underline; */
+      /* font-family: 'Merriweather', serif; */
+      background-color: rgba(0, 0, 0, .6);
+      padding: 10px 20px 10px 22px;
     }
 
 
@@ -281,6 +298,8 @@
       width: 80%;
       font-size: 18px;
       border-top: 1px solid #000;
+      font-family: 'Merriweather', serif;
+      font-weight: 600;
     }
 
 
@@ -317,6 +336,7 @@
 
 <body>
 
+  <div id="container-bg-img"></div>
   <div id="container-hero-image">
     <h1>Knowledge</h1>
     <p>The path to this world</p>
@@ -326,6 +346,7 @@
     </div>
     <a href="https://en.wikipedia.org/wiki/Special:Random" , target="_blank">explore anything</a>
   </div>
+
 
   <div id="result-label">Search results</div>
   <div id="container-result">
