--- a/freecodecamp_challenge/twitch/twitch.html
+++ b/freecodecamp_challenge/twitch/twitch.html
@@ -97,6 +97,12 @@
       box-sizing: border-box;
       padding-top: 0.5em;
     }
+
+    @media screen and (max-width: 480px) {
+      #user-container div {
+        width: 100%;
+      }
+    }
   </style>
 </head>
 
